<resources>
    <string name="app_name">Ejemplo Permisos Riesgosos</string>

    <string name="parrafo1">Ejemplo de solicitud de permisos riesgosos en android, contiene los nueves grupos de permisos riesgosos.</string>
    <string name="boton1">Solicitar permisos</string>
    <string name="boton2">Iniciar Aplicacion</string>
    <string name="repositorio">https://github.com/JoelCautiRojas/Ejemplo_Permisos_de_sistema_MAY2018.git</string>

    <!-- Permisos -->
    <string name="permission1">READ_CALENDAR</string>
    <string name="permission2">WRITE_CALENDAR</string>
    <string name="permission3">WRITE_CALL_LOG</string>
    <string name="permission4">CAMERA</string>
    <string name="permission24">WRITE_EXTERNAL_STORAGE</string>
    <string name="permission23">READ_EXTERNAL_STORAGE</string>
    <string name="permission22">RECEIVE_MMS</string>
    <string name="permission21">RECEIVE_WAP_PUSH</string>
    <string name="permission20">READ_SMS</string>
    <string name="permission19">RECEIVE_SMS</string>
    <string name="permission18">SEND_SMS</string>
    <string name="permission17">BODY_SENSORS</string>
    <string name="permission16">PROCESS_OUTGOING_CALLS</string>
    <string name="permission15">USE_SIP</string>
    <string name="permission14">ADD_VOICEMAIL</string>
    <string name="permission5">READ_CONTACTS</string>
    <string name="permission6">WRITE_CONTACTS</string>
    <string name="permission7">GET_ACCOUNTS</string>
    <string name="permission8">ACCESS_FINE_LOCATION</string>
    <string name="permission9">ACCESS_COARSE_LOCATION</string>
    <string name="permission10">RECORD_AUDIO</string>
    <string name="permission11">READ_PHONE_STATE</string>
    <string name="permission12">CALL_PHONE</string>
    <string name="permission13">READ_CALL_LOG</string>

    <!-- Imagenes -->
    <string name="icono1">Icono de Android</string>

    <!-- Menu -->
    <string name="opcion1_menu1">Indice</string>
    <string name="opcion2_menu1">Permisos de Sistema</string>
    <string name="opcion3_menu1">Solicitar Todos</string>
    <string name="opcion4_menu1">Configurar Aplicacion</string>
    <string name="opcion5_menu1">Acerca de Nosotros</string>

    <!-- Activity Indice -->
    <string name="indice_titulo">Indicaciones:</string>
    <string name="indice_parrafo1">En esta aplicacion se muestran los permisos riesgosos del sistema operativo android, los cuales a partir de Android 6.0 son un requisito de seguridad.</string>
    <string name="indice_parrafo2">Estos permisos se agrupan en 9 categorias, que se muestran con sus respectivos permisos en cada categoria.</string>
    <string name="indice_parrafo3">Hay un boton de SOLICITAR al lado de cada categoria para que el sistema operativo solicite la categoria de permisos al usuario de la aplicacion.</string>
    <string name="indice_parrafo4">Si desea solicitar todos los permisos encontrara una opcion en el menu que le permite SOLICITAR TODOS, si dese revocar los permisos, lo puede hacer desde CONFIGURAR APLICACION.</string>

    <!-- Activity Permisos Riesgosos -->
    <string name="icono_clubdelcaos">icono de club del caos</string>
    <string name="titulo1">Lista de Permisos Solicitados</string>

    <!-- Activity Firma -->
    <string name="firma_repositorio">https://github.com/JoelCautiRojas/EjemploAndroid_MAY2018_PermisosRiesgosos.git</string>
    <string name="firma_autorName">Joel Ruben Cauti Rojas</string>
    <string name="firma_autorPais">LIMA - PERÚ</string>
    <string name="firma_autorPhone">+051 – 963 315 470</string>
    <string name="firma_ejercicioTitulo">Ejercicio Permisos de Sistema</string>
    <string name="firma_enlaceWeb">http://www.programadoresperuanos.com</string>
    <string name="firma_titulo">PROGRAMADORES PERUANOS</string>
    <string name="firma_logoDescripcion">Imagen miniatura del logo Programadores Peruanos</string>
    <string name="firma_autorEnlace">https://www.facebook.com/joelcauti</string>
    <string name="firma_parrafo1">El repositorio de este ejercicio lo puedes encontrar en:</string>
    <string name="firma_parrafo2">Ejercicio desarrollado por:</string>
</resources>
