<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#282828"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:text="@string/titulo1" />
            <TextView
                android:id="@+id/texto1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission1"/>
            <TextView
                android:id="@+id/texto2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission2"/>
            <TextView
                android:id="@+id/texto3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission4"/>
            <TextView
                android:id="@+id/texto4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission5"/>
            <TextView
                android:id="@+id/texto5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission6"/>
            <TextView
                android:id="@+id/texto6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission7"/>
            <TextView
                android:id="@+id/texto7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission8"/>
            <TextView
                android:id="@+id/texto8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission9"/>
            <TextView
                android:id="@+id/texto9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission10"/>
            <TextView
                android:id="@+id/texto10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission11"/>
            <TextView
                android:id="@+id/texto11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission12"/>
            <TextView
                android:id="@+id/texto12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission13"/>
            <TextView
                android:id="@+id/texto13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission3"/>
            <TextView
                android:id="@+id/texto14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission14"/>
            <TextView
                android:id="@+id/texto15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission15"/>
            <TextView
                android:id="@+id/texto16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission16"/>
            <TextView
                android:id="@+id/texto17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission17"/>
            <TextView
                android:id="@+id/texto18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission18"/>
            <TextView
                android:id="@+id/texto19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission19"/>
            <TextView
                android:id="@+id/texto20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission20"/>
            <TextView
                android:id="@+id/texto21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission21"/>
            <TextView
                android:id="@+id/texto22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission22"/>
            <TextView
                android:id="@+id/texto23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission23"/>
            <TextView
                android:id="@+id/texto24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission24"/>

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>